--- a/src/app/components/sequence-container/sequence-container.component.html
+++ b/src/app/components/sequence-container/sequence-container.component.html
@@ -1,5 +1,5 @@
-<div class="mat-elevation-z8">
+<!-- <div class="sequence-wrapper mat-elevation-z5"> -->
   <p>
     {{sequence}}
   </p>
-</div>
+<!-- </div> -->
