--- a/src/app/components/gene-table/gene-table.component.html
+++ b/src/app/components/gene-table/gene-table.component.html
@@ -25,5 +25,5 @@
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: columns;"></mat-row>
+  <mat-row *matRowDef="let row; columns: columns;" (click)="selectGene(row)" [class.selected]="changeRowClass(row)" ></mat-row>
 </mat-table>
